--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,15 @@ buildNumber.properties
 
 # Avoid ignoring Maven wrapper jar file (.jar files are usually ignored)
 !/.mvn/wrapper/maven-wrapper.jar
+
+*.class
+
+# Package Files #
+*.jar
+*.war
+*.ear
+
+
+*.iml
+.idea/
+*.log
